resources/assets/sass/app.scss
@charset "utf-8";

@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,700i|Fira+Mono:400,700&subset=cyrillic');

@import "~normalize-scss/sass/normalize";

@import "kernel";
@import "kernel/font-awesome/variables";
@import "kernel/font-awesome/mixins";
@import "kernel/font-awesome/path";

body {
    overflow-x: hidden;
    overflow-y: scroll;
}

html,
body {
    @include font-optimize;
    color: $color-text;
    line-height: $ui-min-height;
    width: 100%;
    min-width: 360px;
    min-height: 100vh;
    font-size: $font-size;
    font-family: $font-family;
    hyphens: auto;
    padding: 0;
    margin: 0;

    pre, code {
        font-family: $font-mono;
    }

    .layout {
        width: 100vw;
        min-height: 100vh;
        margin: 0 auto;
        position: relative;
        display: flex;
        flex-direction: column;
        overflow: visible;
        justify-content: stretch;
        opacity: 0;
        transition: .3s opacity;
    }

    &.loaded .layout {
        opacity: 1;
    }

    .page-container {
        position: relative;
        width: 100%;
        min-height: 100vh;
        margin: 0 auto;
        order: 2;
        display: flex;
        justify-content: center;
        flex-basis: 100%;
        align-self: right;

        .page {
            box-sizing: border-box;
            padding-top: 60px;
            max-width: $ui-width;
            margin: 0 auto;
            display: flex;
            flex-direction: row;
            justify-content: flex-start;
            align-items: stretch;
            overflow: visible;
        }
    }
}

body {
    @include scrollbar;

    &:hover {
        @include scrollbar-hover;
    }
}

@import "ui/links";
@import "ui/headings";
@import "ui/transitions";
@import "ui/code";
@import "ui/blockquotes";

